# Douyatte

./: .env.example  .gitignore  DouyatteV0.0.2.mmd  README.md
backend/: pyproject.toml
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/services/: gemini_client.py  prompts.py  validation.py
backend/douyatte_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py  test_gemini_client_audio.py  test_validation.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.test.tsx  App.tsx  styles.css  types.ts
frontend/src/components/: AudioSection.tsx  DialogueCard.tsx  EnglishPhraseForm.tsx  ExplanationCard.tsx  IterationHub.tsx  RegisterFormsCard.tsx  WordForm.tsx
frontend/src/iterations/: NewFeatureIteration.tsx  WordContextIteration.tsx
